force-app/main/default/objects/UrjanetConfigurationSetting__mdt/UrjanetConfigurationSetting__mdt.object-meta.xml
<CustomObject>
    <description>Custom configuration settings for the Arcadia Application</description>
    <label>Arcadia Configuration Setting</label>
    <pluralLabel>Arcadia Configuration Settings</pluralLabel>
</CustomObject>