force-app/main/default/objects/UrjanetConfigurationSetting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this config record should be used.</description>
    <inlineHelpText>Whether this config record should be used.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>