force-app/main/default/objects/UrjanetConfigurationSetting__mdt/fields/SettingValue__c.field-meta.xml
<CustomField>
    <fullName>SettingValue__c</fullName>
    <description>The value of this config setting. See documentation for recommended values and formats.</description>
    <inlineHelpText>The value of this config setting. See documentation for recommended values and formats.</inlineHelpText>
    <label>Setting Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>